unpackaged/main/default/objects/APXT_CongaSign__Recipient__c/APXT_CongaSign__Recipient__c.object-meta.xml
<CustomObject>
    <description>Replication of Recipient of a Conga Sign Transaction</description>
    <label>Conga Sign Recipient</label>
    <nameField>
        <displayFormat>CSR-{00000}</displayFormat>
        <label>Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Sign Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>