unpackaged/main/default/objects/APXT_CongaSign__Recipient__c/fields/APXT_CongaSign__RecipientName__c.field-meta.xml
<CustomField>
    <fullName>APXT_CongaSign__RecipientName__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>