unpackaged/main/default/objects/APXT_CongaSign__Recipient__c/fields/APXT_CongaSign__SignerIndex__c.field-meta.xml
<CustomField>
    <fullName>APXT_CongaSign__SignerIndex__c</fullName>
    <label>Signer Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>