unpackaged/main/default/objects/APXT_CongaSign__Recipient__c/fields/APXT_CongaSign__Status__c.field-meta.xml
<CustomField>
    <fullName>APXT_CongaSign__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>SENT</fullName>
            </value>
            <value>
                <fullName>COMPLETE</fullName>
            </value>
            <value>
                <fullName>DECLINED</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>