unpackaged/main/default/objects/APXT_CongaSign__Recipient__c/validationRules/APXT_CongaSign__Prevent_Reparent.validationRule-meta.xml
<ValidationRule>
    <fullName>APXT_CongaSign__Prevent_Reparent</fullName>
    <active>true</active>
    <description>Prevent actual reparenting of records despite allowing for API upsert.</description>
    <errorConditionFormula>ISCHANGED(APXT_CongaSign__Transaction__c)</errorConditionFormula>
    <errorMessage>You cannot Reparent this record.</errorMessage>
</ValidationRule>